Fixed loading anim for dark mode

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -293,12 +293,11 @@ body {
 
 .notesBar .loadingStuff {
     border: none;
-
     background:
-        linear-gradient(0.25turn, transparent, #fff, transparent),
-        linear-gradient(#eee, #eee),
-        radial-gradient(38px circle at 19px 19px, #eee 50%, transparent 51%),
-        linear-gradient(#eee, #eee);
+    linear-gradient(0.25turn, transparent, var(--bar), transparent),
+    linear-gradient(var(--editor), var(--editor)),
+    radial-gradient(38px circle at 19px 19px, #eee 50%, transparent 51%),
+    linear-gradient(var(--editor), var(--editor));
     background-repeat: no-repeat;
     background-size: 315px 250px, 315px 180px, 100px 100px, 225px 30px;
     background-position: -315px 0, 0 0, 0px 190px, 50px 195px;
